--- a/style.css
+++ b/style.css
@@ -1,37 +1,63 @@
 body {
-    background-color: rgb(0, 0, 0);
+    background-image: url("https://media.giphy.com/media/5z0Clc1s7uQfxuC1eG/giphy.gif"); 
+                background-position: center 25%; 
+                background-size: cover; 
     color: green;
 }
 h1 {
     text-align: center;
     color: rgb(0, 255, 0);
 }
-
 .contenedor-principal {
-    width: 400px;
+    width: 500px;
+}
+.nombre-principal {
+    font-size: 30px;
+    align-items: self-end;
+    color: white;
+    float: right;
+}
+.contenedor-general {
+    padding-left: 2cm;
+}
+.t-secundario {
+    width: 800px;  
+}
+.contenedor1 {
+    text-align: start;
+    background-color: black;
+}
+.texto-i {
+    color: rgb(255, 255, 255);
+}
+.t-perfil, .yo {
+    color: greenyellow;
+}
+.texto-2 {
+    color: white;
+}
+.t-experiencia, .t-educacion, .t-referencia, .idiomas, .aficiones {
+    padding-left: 1cm;
+    color: greenyellow;
+}
+.texto-f {
+    padding-left: 1cm;
+    color: white;
 }
 .imagen {
     width: 100px;
     height: 100px;
 }
-
-.texto-i {
-    color: rgb(255, 255, 255);
+.image2 {
+    text-align: center;
+    height: 150px;
 }
 
-.texto-f {
-    color: white;
-}
-.nombre-principal {
-    font-size: 20px;
-    align-items: self-end;
-    color: white;
-    float: right;
-}
-.t-secundario {
-    width: 1800px;  
-}
-.t-experiencia, .t-educacion, .t-referencia {
-    color: greenyellow;
-}
+
+
+
+
+
+
+
 
